[metadata]
name = fs.smbfs
version = 0.6.2
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.smbfs
description = Pyfilesystem2 over SMB using pysmb
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = filesystem, Pyfilesystem2, smb, cifs, samba
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems
  Topic :: System :: Networking

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = fs.smbfs, fs.opener
test_suite = tests
setup_requires =
  setuptools
install_requires =
  configparser ~= 3.2 ; python_version < '3'
  fs ~=2.2
  pysmb >=1.1.22, !=1.1.26
  six ~=1.10
tests_require =
  docker ~=3.6
  mock ~=2.0 ; python_version < '3.4'
  semantic_version ~=2.6

[options.extras_require]
dev =
  docutils
  Pygments
  codecov
  green
  coverage
test =
  docker ~=3.6
  mock ~=2.0 ; python_version < '3.4'
  semantic_version ~=2.6

[bdist_wheel]
universal = 1

[options.entry_points]
fs.opener =
  smb  = fs.opener.smbfs:SMBOpener
  cifs = fs.opener.smbfs:SMBOpener

[aliases]
test = green

[coverage:report]
show_missing = true
exclude_lines =
  pragma: no cover
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented
  if six.PY3
  if six.PY2

[nosetests]
verbosity = 2
with-coverage = true
cover-xml = true
cover-package = fs.smbfs, fs.opener.smbfs
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
processes = 1

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
match-dir = (?!tests)[^\.].*
